All task1 placeholders

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -392,7 +392,9 @@
   {
    "cell_type": "markdown",
    "id": "ff031ef2-6145-4aa9-9b15-388eb88c6bfc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Check Missing Values\n"
    ]
@@ -505,28 +507,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "da5c598c-4a8e-4b09-86bb-d0111240c6b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\zkidanemariam\\AppData\\Local\\Temp\\ipykernel_15888\\3243247046.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df['VehicleIntroDate'] = pd.to_datetime(df['VehicleIntroDate'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# check date format \n",
+    "\n",
     "df['TransactionMonth'] = pd.to_datetime(df['TransactionMonth'])\n",
-    "df['VehicleIntroDate'] = pd.to_datetime(df['VehicleIntroDate'])\n"
+    "\n",
+    "# df['VehicleIntroDate'].head(10)\n",
+    "\n",
+    "df['VehicleIntroDate'] = pd.to_datetime(df['VehicleIntroDate'], format='%Y-%m-%d', errors='coerce')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e9183ac-ada3-4d7e-9b8c-2561ca15865c",
+   "metadata": {},
+   "source": [
+    "## Data Summarization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "024b4548-800c-4b4d-a6f8-3b093fc4bab9",
+   "metadata": {},
+   "source": [
+    "### Univariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "638eeb5b-461b-41b2-acce-7ce299385fd0",
+   "metadata": {},
+   "source": [
+    "### Count unique values for categorical variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f53e16be-6d66-4c42-ad78-680f68da0908",
+   "metadata": {},
+   "source": [
+    "## Univariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "932c5ee9-e660-4539-b68e-6d600fe71e8c",
+   "metadata": {},
+   "source": [
+    "### Distribution of numeric variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40e1b83c-8d70-480e-84fc-964080c70057",
+   "metadata": {},
+   "source": [
+    "### Distribution of categorical variables\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0ce6008-0e33-4b9a-a0f2-6905ca83147d",
+   "metadata": {},
+   "source": [
+    "### Check for outliers using boxplots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa0942ef-1c19-4bff-a37f-a651d7e5fbca",
+   "metadata": {},
+   "source": [
+    "## Bivariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64fbb79d-1e6a-4449-b01b-5c5ceb6ed022",
+   "metadata": {},
+   "source": [
+    "### Correlations between numeric variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "422716a1-fb32-476a-b12c-d096025f2476",
+   "metadata": {},
+   "source": [
+    "### Loss Ratio by Province, VehicleType, Gender"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe3cbabf-becb-4360-81c8-0a45d6416da4",
+   "metadata": {},
+   "source": [
+    "### Claims vs Premium scatter plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff230bf3-94ce-4da3-8d7c-3d568c6fbb46",
+   "metadata": {},
+   "source": [
+    "## Temporal Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "024a6204-e96a-4c13-bfe5-a1f6ee43ffcc",
+   "metadata": {},
+   "source": [
+    "### Claims over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc95e36c-9605-43cf-8dd8-7700b8851d63",
+   "metadata": {},
+   "source": [
+    "### Premiums over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b7221da-823d-4bf9-9dfa-3ccc322716da",
+   "metadata": {},
+   "source": [
+    "## Multivariate Analysis / Cross-Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cfa61df-d2f8-43d0-803c-d7e470fda8d2",
+   "metadata": {},
+   "source": [
+    "### Province vs VehicleType vs LossRatio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dd636cc-2d09-4be1-a471-c0b49b496c84",
+   "metadata": {},
+   "source": [
+    "### Gender vs VehicleType"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e9183ac-ada3-4d7e-9b8c-2561ca15865c",
+   "id": "e4de58fc-6001-44a9-adf7-3dae8973de21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e62bece-f969-44cd-8976-0fadd3a47b77",
    "metadata": {},
    "outputs": [],
    "source": []
